fixed legend formatting and adjusted colors function for better visibility

--- a/Leaflet-Step-1/static/css/style.css
+++ b/Leaflet-Step-1/static/css/style.css
@@ -7,25 +7,14 @@ html,body{
 }
 
 .legend {
-  padding: 6px 8px;
-  font: 12px Arial, Helvetica, sans-serif;
-  font-weight: bold;
+  line-height: 18px;
   color: #555;
-  background: #fff;
-  background: rgba(255, 255, 255, 0.8);
-  border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  width: 50px;
 }
-
-.legend ul {
-  padding: 0;
-  margin: 0;
-  clear: both;
-  list-style-type: none;
-}
-
-.legend li {
-  display: inline-block;
-  width: 30px;
-  height: 22px;
+.legend i {
+  width: 50px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
 }
